2014-07-06  Eero Simoncelli  <eero@elvira.cns.nyu.edu>

	* spikesort_demo/load_default_parameters.m: 
	- Moved num_waveforms back into clustering section (hadn't realized
	there was a separate one for CBP!)

	- Moved default partitioning parameters into here.

2014-07-05  Eero Simoncelli  <eero@elvira.cns.nyu.edu>

	* spikesort_demo/load_raw_data.m: 
	Changed default Quiroga filtering.freq back to []

	Current results on Quiroga dataset 1, with waveforms re-fit twice,
	and threshold of cell 1 slightly hand-adjusted to eliminate
	refractory violations:
	Spike counts: [1921;1473;1138]
	Clustering: Misses=241/3477 (6.93%) FPs=1531/4767 (32.12%)
	       CBP: Misses=3/3477 (0.09%) FPs=2/3476 (0.06%)
	
	
2014-07-03  Eero Simoncelli  <eero@olympia.cns.nyu.edu>

	* spikesort_demo/spikesort_demo_setup.m: 
	error-protected the call to matlabpool, so that it now just gives
	a warning.

	* spikesort_demo/preproc/PreprocessTrace.m (noise_zone_idx): 
	noise_threshold parameter moved from general to whitening section.

	* spikesort_demo/load_raw_data.m: 
	- re-organized loading of data files and specialization of
	parameters.  Now it's all done in this single function, which
	replaces load_data_defaults.m

	* spikesort_demo/load_default_parameters.m: 
	added plotting.first_fig_num, and changed all display code to use
          	figure numbers offset from this number
	default fontsize changed to 12
	num_waveforms parameter moved from clustering to general section

	* spikesort_demo/preproc/plotting/VisualizeClustering.m (nh): 
	plot noise ball

	* spikesort_demo/preproc/EstimateInitialWaveforms.m (threshold): 
	>>> changed threshold for choosing segments for clustering  to 
	mean + 4*std of a chi distribution (about 3.9)

	* ToDo and ChangeLog:  moved to main directory
	* spikesort_demo/preproc/PreprocessTrace.m (nchan): 
	only plot cross-corr  for multi-channel recordings
	Display: fig3: histogram of norms, with threshold
                      fig4: ACF of noise regions