@@ -46,9 +46,12 @@ function [snippets, breaks, snippet_lens, snippet_centers, IDX] = ...
 % Take a moving average
 signal_rms = smooth(sqrt(sum(signal .^ 2, 1)), pars.smooth_len);
 
-% Identify dead zones.
-dead_zone_idx = FindConsecutiveZeroes(signal_rms > pars.threshold, ...
-                                      pars.min_separation_len);
+% Identify dead zones
+dof = size(signal,1);
+chiMean = sqrt(2)*gamma((dof+1)/2)/gamma(dof/2);  
+chiVR = dof - chiMean^2;
+rms_above_thresh = signal_rms > (chiMean + pars.threshold*sqrt(chiVR));
+dead_zone_idx = FindConsecutiveZeroes(rms_above_thresh, pars.min_separation_len);
                                                                    
 % Find the "islands of 1's" in dead_zone_idx
 IDX = bwconncomp(~dead_zone_idx);
